useWebKitWebInspector should be more robust against missing files https://bugs.webkit.org/show_bug.cgi?id=85563 <rdar://problem/11373948>

Reviewed by Dan Bernstein.

* WebCoreSupport/WebInspectorClient.mm:
(useWebKitWebInspector):

Canonical link: https://commits.webkit.org/103126@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116053 268f45cc-cd09-0410-ab3c-d52691b4dbfc